fix z-index and click-select elements problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1370,6 +1370,7 @@ nav {
   left: 0;
   margin-left: auto;
   margin-right: auto;
+  pointer-events: auto;
 }
 
 .nadia-de-vries__button__audio-player:focus {
